fix dockerfile and endpoints
