# models/categoria.go
@@ -10,4 +10,16 @@ type Categoria struct {
 	CreatedAt time.Time `json:"created_at" gorm:"-"`
 }
 
+// Input para crear categoria
+type CategoriaCreateInput struct {
+	Nombre string `json:"nombre" binding:"required"`
+	Tipo   string `json:"tipo" binding:"required"`
+}
+
+// Input para actualizar categoria (parcial)
+type CategoriaUpdateInput struct {
+	Nombre *string `json:"nombre,omitempty"`
+	Tipo   *string `json:"tipo,omitempty"`
+}
+
 func (Categoria) TableName() string { return "categorias" }
